# acc-scoring-tool

./: .gitignore  pyproject.toml
data/: borders.txt  global_penalties.csv  scores.csv  teams.csv
data/rounds/: 01_01_flight-data.csv  01_02_flight-data.csv  01_03_flight-data.csv  01_04_flight-data.csv  01_05_flight-data.csv  01_06_flight-data.csv  01_08_flight-data.csv  01_09_flight-data.csv  01_10_flight-data.csv  01_11_flight-data.csv  01_12_flight-data.csv  01_13_flight-data.csv  01_14_flight-data.csv  01_15_flight-data.csv  01_16_flight-data.csv  01_17_flight-data.csv  01_18_flight-data.csv  01_19_flight-data.csv  01_20_flight-data.csv  01_21_flight-data.csv  01_22_flight-data.csv  01_24_flight-data.csv  01_25_flight-data.csv  01_26_flight-data.csv  01_28_flight-data.csv  01_29_flight-data.csv  01_30_flight-data.csv  01_31_flight-data.csv  01_32_flight-data.csv  01_33_flight-data.csv  01_34_flight-data.csv  01_36_flight-data.csv  01_37_flight-data.csv  01_scores.csv  02_01_flight-data.csv  02_02_flight-data.csv  02_03_flight-data.csv  02_05_flight-data.csv  02_06_flight-data.csv  02_08_flight-data.csv  (+23 more)
src/scoring_tool/: __init__.py  in.py  input_tool.py  marimo_helper_functions.py  scoring.py
