[project]
name = "scoring-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tjalf Stadel", email = "tjalf.stadel@web.de" }
]
requires-python = ">=3.14"
dependencies = [
    "polars>=1.41.2",
]

[project.scripts]
scoring-tool = "scoring_tool:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
