[project]
name = "scoring-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tjalf Stadel", email = "tjalf.stadel@web.de" }
]
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "marimo>=0.23.9",
    "movingpandas>=0.22.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pydata-wrangler>=0.4.0",
    "scipy>=1.17.1",
    "stonesoup>=1.8",
]

[project.scripts]
scoring-tool = "scoring_tool:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
