[project]
name = "scoring-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tjalf Stadel", email = "tjalf.stadel@web.de" }
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "marimo>=0.23.9",
    "numpy>=2.4.6",
    "pip>=26.1.2",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "pydata-wrangler>=0.4.0",
    "pykalman>=0.11.2",
]

[project.scripts]
scoring-tool = "scoring_tool:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
